jvm/jvm.rs

extern "C" {
    pub fn JVM_TraceMethodCalls(on: jboolean);
}
extern "C" {
    pub fn JVM_TotalMemory() -> jlong;
}
extern "C" {
    pub fn JVM_FreeMemory() -> jlong;
}
extern "C" {
    pub fn JVM_MaxMemory() -> jlong;
}
extern "C" {
    pub fn JVM_ActiveProcessorCount() -> jint;
}
extern "C" {
    pub fn JVM_LoadLibrary(name: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn JVM_UnloadLibrary(handle: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn JVM_FindLibraryEntry(
        handle: *mut ::std::os::raw::c_void,
        name: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn JVM_IsSupportedJNIVersion(version: jint) -> jboolean;
}
extern "C" {
    pub fn JVM_IsNaN(d: jdouble) -> jboolean;
}
extern "C" {
    pub fn JVM_FillInStackTrace(env: *mut JNIEnv, throwable: jobject);
}
extern "C" {
    pub fn JVM_GetStackTraceDepth(env: *mut JNIEnv, throwable: jobject) -> jint;
}
extern "C" {
    pub fn JVM_GetStackTraceElement(env: *mut JNIEnv, throwable: jobject, index: jint) -> jobject;
}
extern "C" {
    pub fn JVM_InitializeCompiler(env: *mut JNIEnv, compCls: jclass);
}
extern "C" {
    pub fn JVM_IsSilentCompiler(env: *mut JNIEnv, compCls: jclass) -> jboolean;
}
extern "C" {
    pub fn JVM_CompileClass(env: *mut JNIEnv, compCls: jclass, cls: jclass) -> jboolean;
}
extern "C" {
    pub fn JVM_CompileClasses(env: *mut JNIEnv, cls: jclass, jname: jstring) -> jboolean;
}
extern "C" {
    pub fn JVM_CompilerCommand(env: *mut JNIEnv, compCls: jclass, arg: jobject) -> jobject;
}
extern "C" {
    pub fn JVM_EnableCompiler(env: *mut JNIEnv, compCls: jclass);
}
extern "C" {
    pub fn JVM_DisableCompiler(env: *mut JNIEnv, compCls: jclass);
}
extern "C" {
    pub fn JVM_StartThread(env: *mut JNIEnv, thread: jobject);
}
extern "C" {
    pub fn JVM_StopThread(env: *mut JNIEnv, thread: jobject, exception: jobject);
}
extern "C" {
    pub fn JVM_IsThreadAlive(env: *mut JNIEnv, thread: jobject) -> jboolean;
}
extern "C" {
    pub fn JVM_SuspendThread(env: *mut JNIEnv, thread: jobject);
}
extern "C" {
    pub fn JVM_ResumeThread(env: *mut JNIEnv, thread: jobject);
}
extern "C" {
    pub fn JVM_SetThreadPriority(env: *mut JNIEnv, thread: jobject, prio: jint);
}
extern "C" {
    pub fn JVM_Yield(env: *mut JNIEnv, threadClass: jclass);
}
extern "C" {
    pub fn JVM_Sleep(env: *mut JNIEnv, threadClass: jclass, millis: jlong);
}
extern "C" {
    pub fn JVM_CurrentThread(env: *mut JNIEnv, threadClass: jclass) -> jobject;
}
extern "C" {
    pub fn JVM_CountStackFrames(env: *mut JNIEnv, thread: jobject) -> jint;
}
extern "C" {
    pub fn JVM_Interrupt(env: *mut JNIEnv, thread: jobject);
}
extern "C" {
    pub fn JVM_IsInterrupted(
        env: *mut JNIEnv,
        thread: jobject,
        clearInterrupted: jboolean,
    ) -> jboolean;
}
extern "C" {
    pub fn JVM_HoldsLock(env: *mut JNIEnv, threadClass: jclass, obj: jobject) -> jboolean;
}
extern "C" {
    pub fn JVM_DumpAllStacks(env: *mut JNIEnv, unused: jclass);
}
extern "C" {
    pub fn JVM_GetAllThreads(env: *mut JNIEnv, dummy: jclass) -> jobjectArray;
}
extern "C" {
    pub fn JVM_SetNativeThreadName(env: *mut JNIEnv, jthread: jobject, name: jstring);
}
extern "C" {
    pub fn JVM_DumpThreads(
        env: *mut JNIEnv,
        threadClass: jclass,
        threads: jobjectArray,
    ) -> jobjectArray;
}
extern "C" {
    pub fn JVM_CurrentLoadedClass(env: *mut JNIEnv) -> jclass;
}
extern "C" {
    pub fn JVM_CurrentClassLoader(env: *mut JNIEnv) -> jobject;
}
extern "C" {
    pub fn JVM_GetClassContext(env: *mut JNIEnv) -> jobjectArray;
}
extern "C" {
    pub fn JVM_ClassDepth(env: *mut JNIEnv, name: jstring) -> jint;
}
extern "C" {
    pub fn JVM_ClassLoaderDepth(env: *mut JNIEnv) -> jint;
}
extern "C" {
    pub fn JVM_GetSystemPackage(env: *mut JNIEnv, name: jstring) -> jstring;
}
extern "C" {
    pub fn JVM_GetSystemPackages(env: *mut JNIEnv) -> jobjectArray;
}
extern "C" {
    pub fn JVM_AllocateNewObject(
        env: *mut JNIEnv,
        obj: jobject,
        currClass: jclass,
        initClass: jclass,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_AllocateNewArray(
        env: *mut JNIEnv,
        obj: jobject,
        currClass: jclass,
        length: jint,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_LatestUserDefinedLoader(env: *mut JNIEnv) -> jobject;
}
extern "C" {
    pub fn JVM_LoadClass0(
        env: *mut JNIEnv,
        obj: jobject,
        currClass: jclass,
        currClassName: jstring,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_GetArrayLength(env: *mut JNIEnv, arr: jobject) -> jint;
}
extern "C" {
    pub fn JVM_GetArrayElement(env: *mut JNIEnv, arr: jobject, index: jint) -> jobject;
}
extern "C" {
    pub fn JVM_GetPrimitiveArrayElement(
        env: *mut JNIEnv,
        arr: jobject,
        index: jint,
        wCode: jint,
    ) -> jvalue;
}
extern "C" {
    pub fn JVM_SetArrayElement(env: *mut JNIEnv, arr: jobject, index: jint, val: jobject);
}
extern "C" {
    pub fn JVM_SetPrimitiveArrayElement(
        env: *mut JNIEnv,
        arr: jobject,
        index: jint,
        v: jvalue,
        vCode: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn JVM_NewArray(env: *mut JNIEnv, eltClass: jclass, length: jint) -> jobject;
}
extern "C" {
    pub fn JVM_NewMultiArray(env: *mut JNIEnv, eltClass: jclass, dim: jintArray) -> jobject;
}
extern "C" {
    pub fn JVM_GetCallerClass(env: *mut JNIEnv, depth: ::std::os::raw::c_int) -> jclass;
}
extern "C" {
    pub fn JVM_FindPrimitiveClass(env: *mut JNIEnv, utf: *const ::std::os::raw::c_char) -> jclass;
}
extern "C" {
    pub fn JVM_ResolveClass(env: *mut JNIEnv, cls: jclass);
}
extern "C" {
    pub fn JVM_FindClassFromBootLoader(
        env: *mut JNIEnv,
        name: *const ::std::os::raw::c_char,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_FindClassFromCaller(
        env: *mut JNIEnv,
        name: *const ::std::os::raw::c_char,
        init: jboolean,
        loader: jobject,
        caller: jclass,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_FindClassFromClassLoader(
        env: *mut JNIEnv,
        name: *const ::std::os::raw::c_char,
        init: jboolean,
        loader: jobject,
        throwError: jboolean,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_FindClassFromClass(
        env: *mut JNIEnv,
        name: *const ::std::os::raw::c_char,
        init: jboolean,
        from: jclass,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_FindLoadedClass(env: *mut JNIEnv, loader: jobject, name: jstring) -> jclass;
}
extern "C" {
    pub fn JVM_DefineClass(
        env: *mut JNIEnv,
        name: *const ::std::os::raw::c_char,
        loader: jobject,
        buf: *const jbyte,
        len: jsize,
        pd: jobject,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_DefineClassWithSource(
        env: *mut JNIEnv,
        name: *const ::std::os::raw::c_char,
        loader: jobject,
        buf: *const jbyte,
        len: jsize,
        pd: jobject,
        source: *const ::std::os::raw::c_char,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_GetClassName(env: *mut JNIEnv, cls: jclass) -> jstring;
}
extern "C" {
    pub fn JVM_GetClassInterfaces(env: *mut JNIEnv, cls: jclass) -> jobjectArray;
}
extern "C" {
    pub fn JVM_IsInterface(env: *mut JNIEnv, cls: jclass) -> jboolean;
}
extern "C" {
    pub fn JVM_GetClassSigners(env: *mut JNIEnv, cls: jclass) -> jobjectArray;
}
extern "C" {
    pub fn JVM_SetClassSigners(env: *mut JNIEnv, cls: jclass, signers: jobjectArray);
}
extern "C" {
    pub fn JVM_GetProtectionDomain(env: *mut JNIEnv, cls: jclass) -> jobject;
}
extern "C" {
    pub fn JVM_IsArrayClass(env: *mut JNIEnv, cls: jclass) -> jboolean;
}
extern "C" {
    pub fn JVM_IsPrimitiveClass(env: *mut JNIEnv, cls: jclass) -> jboolean;
}
extern "C" {
    pub fn JVM_GetComponentType(env: *mut JNIEnv, cls: jclass) -> jclass;
}
extern "C" {
    pub fn JVM_GetClassModifiers(env: *mut JNIEnv, cls: jclass) -> jint;
}
extern "C" {
    pub fn JVM_GetDeclaredClasses(env: *mut JNIEnv, ofClass: jclass) -> jobjectArray;
}
extern "C" {
    pub fn JVM_GetDeclaringClass(env: *mut JNIEnv, ofClass: jclass) -> jclass;
}
extern "C" {
    pub fn JVM_GetClassSignature(env: *mut JNIEnv, cls: jclass) -> jstring;
}
extern "C" {
    pub fn JVM_GetClassAnnotations(env: *mut JNIEnv, cls: jclass) -> jbyteArray;
}
extern "C" {
    pub fn JVM_GetClassTypeAnnotations(env: *mut JNIEnv, cls: jclass) -> jbyteArray;
}
extern "C" {
    pub fn JVM_GetFieldTypeAnnotations(env: *mut JNIEnv, field: jobject) -> jbyteArray;
}
extern "C" {
    pub fn JVM_GetMethodTypeAnnotations(env: *mut JNIEnv, method: jobject) -> jbyteArray;
}
extern "C" {
    pub fn JVM_GetClassDeclaredMethods(
        env: *mut JNIEnv,
        ofClass: jclass,
        publicOnly: jboolean,
    ) -> jobjectArray;
}
extern "C" {
    pub fn JVM_GetClassDeclaredFields(
        env: *mut JNIEnv,
        ofClass: jclass,
        publicOnly: jboolean,
    ) -> jobjectArray;
}
extern "C" {
    pub fn JVM_GetClassDeclaredConstructors(
        env: *mut JNIEnv,
        ofClass: jclass,
        publicOnly: jboolean,
    ) -> jobjectArray;
}
extern "C" {
    pub fn JVM_GetClassAccessFlags(env: *mut JNIEnv, cls: jclass) -> jint;
}
extern "C" {
    pub fn JVM_InvokeMethod(
        env: *mut JNIEnv,
        method: jobject,
        obj: jobject,
        args0: jobjectArray,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_NewInstanceFromConstructor(
        env: *mut JNIEnv,
        c: jobject,
        args0: jobjectArray,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_GetClassConstantPool(env: *mut JNIEnv, cls: jclass) -> jobject;
}
extern "C" {
    pub fn JVM_ConstantPoolGetSize(env: *mut JNIEnv, unused: jobject, jcpool: jobject) -> jint;
}
extern "C" {
    pub fn JVM_ConstantPoolGetClassAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_ConstantPoolGetClassAtIfLoaded(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jclass;
}
extern "C" {
    pub fn JVM_ConstantPoolGetMethodAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_ConstantPoolGetMethodAtIfLoaded(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_ConstantPoolGetFieldAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_ConstantPoolGetFieldAtIfLoaded(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_ConstantPoolGetMemberRefInfoAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jobjectArray;
}
extern "C" {
    pub fn JVM_ConstantPoolGetIntAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jint;
}
extern "C" {
    pub fn JVM_ConstantPoolGetLongAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jlong;
}
extern "C" {
    pub fn JVM_ConstantPoolGetFloatAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jfloat;
}
extern "C" {
    pub fn JVM_ConstantPoolGetDoubleAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jdouble;
}
extern "C" {
    pub fn JVM_ConstantPoolGetStringAt(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jstring;
}
extern "C" {
    pub fn JVM_ConstantPoolGetUTF8At(
        env: *mut JNIEnv,
        unused: jobject,
        jcpool: jobject,
        index: jint,
    ) -> jstring;
}
